upgrade: all tests